<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.umidade.HomeFragment">

    <View
        android:id="@+id/fundo"
        style="@style/fundo"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <View
        android:id="@+id/fundo2"
        style="@style/fundo"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <View
        android:id="@+id/fundo3"
        style="@style/fundo"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <ImageView
        android:id="@+id/solo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_water_drop_24"
        app:layout_constraintBottom_toBottomOf="@+id/fundo3"
        app:layout_constraintEnd_toEndOf="@+id/fundo3"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="@+id/fundo3"
        app:layout_constraintTop_toTopOf="@+id/fundo3"
        app:layout_constraintVertical_bias="0.69" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_device_thermostat_24"
        app:layout_constraintBottom_toBottomOf="@+id/fundo"
        app:layout_constraintEnd_toEndOf="@+id/fundo"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="@+id/fundo"
        app:layout_constraintTop_toTopOf="@+id/fundo"
        app:layout_constraintVertical_bias="0.69" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_air_24"
        app:layout_constraintBottom_toBottomOf="@+id/fundo2"
        app:layout_constraintEnd_toEndOf="@+id/fundo2"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="@+id/fundo2"
        app:layout_constraintTop_toTopOf="@+id/fundo2"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/umidadesolo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/temperatura"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewUmidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="110dp"
        android:text="@string/umidade"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/fundo2"
        app:layout_constraintEnd_toEndOf="@+id/fundo2"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="@+id/fundo2"
        app:layout_constraintTop_toTopOf="@+id/fundo2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TempAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fundo"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/fundo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatura" />

    <TextView
        android:id="@+id/UmidSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fundo3"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/fundo3"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolo" />

    <TextView
        android:id="@+id/UmidadeAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fundo2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/fundo2"
        app:layout_constraintTop_toBottomOf="@+id/textViewUmidade" />

</androidx.constraintlayout.widget.ConstraintLayout>